--- a/v2ray/config.tmpl
+++ b/v2ray/config.tmpl
@@ -16,6 +16,9 @@
         "wsSettings": {
           "path": "/ws"
         }
+      }，
+      "tlsSettings": {
+        "allowInsecure": false
       }
     }
   ],
