Fix vmess qrcode

--- a/v2ray/config.tmpl
+++ b/v2ray/config.tmpl
@@ -15,10 +15,8 @@
         "network": "ws",
         "wsSettings": {
           "path": "/ws"
-        }
-      },
-      "tlsSettings": {
-        "allowInsecure": false
+        },
+        "security": "tls"
       }
     }
   ],
